@@ -6,6 +6,6 @@
 # See http://shorewall.net/traffic_shaping.htm for additional information.
 #
 ###############################################################################
-#INTERFACE:	SOURCE		DEST		PROTO	DEST	SOURCE
+#INTERFACE:	SOURCE		DEST		PROTO	DEST	SOURCE   LENGTH
 #CLASS							PORT(S)	PORT(S)
 #LAST LINE -- ADD YOUR ENTRIES BEFORE THIS ONE -- DO NOT REMOVE
