@@ -1662,6 +1662,16 @@ eth0              192.168.1.0/24   206.124.146.179</programlisting></para>
             are supported.</para>
           </listitem>
         </varlistentry>
+
+        <varlistentry>
+          <term>LENGTH</term>
+
+          <listitem>
+            <para>Must be a power of 2 between 32 and 8192 inclusive. Packets
+            with a total length that is strictly less than the specified value
+            will match the rule.</para>
+          </listitem>
+        </varlistentry>
       </variablelist>
 
       <para>Example:</para>
