@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE refentry PUBLIC "-//OASIS//DTD DocBook XML V4.4//EN"
+"http://www.oasis-open.org/docbook/xml/4.4/docbookx.dtd">
 <refentry>
   <refmeta>
     <refentrytitle>shorewall-tcfilters</refentrytitle>
@@ -103,6 +105,17 @@
 
         <listitem>
           <para>Source port.</para>
+        </listitem>
+      </varlistentry>
+
+      <varlistentry>
+        <term><emphasis role="bold">LENGTH</emphasis> (Optional) - [<emphasis
+        role="bold">-</emphasis>|<emphasis>number</emphasis>]</term>
+
+        <listitem>
+          <para>Must be a power of 2 between 32 and 8192 inclusive. Packets
+          with a total length that is strictly less than the specified
+          <replaceable>number</replaceable> will match the rule.</para>
         </listitem>
       </varlistentry>
     </variablelist>
