@@ -7,6 +7,8 @@ Changes in Shorewall 4.3.12
 3) Delete support for ipset binding. Jozsef has removed the capability
    from ipset.
 
+4) Add LENGTH column to tcfilters file.
+
 Changes in Shorewall 4.3.11
 
 1) Reduce the number of arguments passed in may cases.
